# CodingChallenge

./: CodingChallenge.ipynb  README.md  main.py  pyproject.toml
challenge_index/: default__vector_store.json  docstore.json  index_store.json
document_index/: default__vector_store.json  docstore.json  index_store.json
scripts/: core.py  metadata_extraction.py  metadata_filtering.py
test_index/: default__vector_store.json  docstore.json  index_store.json
tests/: test_core.py
